# blogs-rust-webapp

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  blog_database  diesel.toml  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: auth.ts  index.css  main.tsx
frontend/src/components/: CreatePostDialog.tsx  DeletePostDialog.tsx  Input.tsx  LoadingSpinner.tsx  NavigationBar.tsx  Paginator.tsx  Post.tsx  PostCard.tsx  PostLoadingSkeleton.tsx  ProfilePicture.tsx
frontend/src/pages/: CreatePostPage.tsx  GlobalErrorPage.tsx  LoginPage.tsx  MainLayout.tsx  PostsPage.tsx  SignUpPage.tsx  UserErrorPage.tsx  UserPage.tsx
migrations/2024-10-16-215554_create_blog_posts/: up.sql
migrations/2025-05-16-075128_create_users/: up.sql
migrations/2025-06-05-121357_create_sessions_table/: up.sql
migrations/2025-07-04-142937_create_users_table/: up.sql
migrations/2025-07-04-143012_create_blogs_table/: up.sql
migrations/2025-07-04-143148_create_sessions_table/: up.sql
src/: error.rs  lib.rs  main.rs  models.rs  schema.rs
src/controller/: post.rs  user.rs
src/model/: mod.rs  post.rs  session.rs  user.rs
src/repository/: mod.rs  post.rs  session.rs  user.rs
src/service/: post.rs  user.rs
templates/: home.html
